--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
         </section>
 
-   <!–-   <section class="timeline">
+   <!--  <section class="timeline">
 
           <div class="title-wrapper">
             <div class="icon-box">
@@ -358,7 +358,7 @@
           </ol>
 
         </section> 
--–>
+   -->
 
        
 
